test/invalid/MissingMethodBody/MissingMethodBody.plume
/**
 * @author 35237, Marcos Vasco
 */
class MissingMethodBody extends UnaryLogicalOperation is
  
  method calculate : (val : Boolean) -> Boolean is